fixing spacing at the top

--- a/style.css
+++ b/style.css
@@ -16,11 +16,12 @@ body{
     text-align: center;
     /* justify-content: center; */
     background-position: center;
-    min-height: 300px;
+    min-height: auto;
+    padding-bottom: -90px;
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
-    border-radius: 30px;
+   margin-top: 0;
 }
 header{
  /* background-image: url("path/to/your/image.jpg"); */
@@ -38,6 +39,7 @@ header{
     display: flex;
    margin: 0 auto;
    margin-top: 20px;
+   top:0;
 }
 .ipentry{
     width: 300px;
